--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<properties>
 		<spring.version>4.0.5.RELEASE</spring.version>
 		<spring.security.version>3.2.6.RELEASE</spring.security.version>
+		<hibernate.version>4.3.10.Final</hibernate.version>
 	</properties>
 
 	<dependencies>
@@ -21,7 +22,7 @@
 			<artifactId>json</artifactId>
 			<version>20141113</version>
 		</dependency>
-
+<!-- 		spring framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
@@ -85,6 +86,17 @@
 			<version>2.2.4</version>
 		</dependency>
 		<!-- hibernate -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
